# bazel-tips

./: BUILD.bazel  README.md  WORKSPACE  go.mod
cmd/bazel-tips/: BUILD.bazel  main.go
pkg/mypackage/: BUILD.bazel  mypackage.go  mypackage_test.go
