load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "mypackage",
    srcs = ["mypackage.go"],
    importpath = "github.com/ldx/bazel_tips/pkg/mypackage",
    visibility = ["//visibility:public"],
)

go_test(
    name = "mypackage_test",
    srcs = ["mypackage_test.go"],
    embed = [":mypackage"],
)
